Add link to stuffed mushrooms page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <body>
     <h1>Odin Recipes</h1>
+    <a href="/recipes/stuffed-mushrooms.html">Crab-stuffed Mushrooms</a>
   </body>
 
 </html>
