Add description of stuffed mushrooms

--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -11,6 +11,12 @@
     <a href="../index.html">Home</a>
     <h1>Crab-stuffed Mushrooms</h1>
     <img src="../images/stuffed-mushrooms.png" width="400px" height="auto" alt="Crab Stuffed Mushrooms">
+
+    <h2>Description</h2>
+    <p>These tasty crab-stuffed mushrooms are seasoned with thyme, oregano, and
+      savory. Choose good-sized mushrooms for this appetizer, about 2 inches across.
+      Just wipe them clean with a damp towel.
+    </p>
   </body>
 
 </html>
