Add ingredients for stuffed mushrooms

--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -17,6 +17,21 @@
       savory. Choose good-sized mushrooms for this appetizer, about 2 inches across.
       Just wipe them clean with a damp towel.
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>7 ounces canned crabmeat, rinsed</li>
+      <li>5 green onions, thinly sliced</li>
+      <li><sup>1</sup>/<sub>4</sub> teaspoon dried thyme or to taste</li>
+      <li><sup>1</sup>/<sub>4</sub> teaspoon dried oregano or to taste</li>
+      <li><sup>1</sup>/<sub>4</sub> teaspoon ground savory or to taste</li>
+      <li>ground black pepper to taste</li>
+      <li><sup>1</sup>/<sub>4</sub> cup grated Parmesan cheese</li>
+      <li><sup>1</sup>/<sub>3</sub> cup mayonnaise</li>
+      <li>1 pound fresh mushrooms</li>
+      <li>3 tablespoons grated Parmesan cheese</li>
+      <li><sup>1</sup>/<sub>4</sub> teaspoon paprika</li>
+    </ul>
   </body>
 
 </html>
