Add cooking directions for stuffed mushrooms

--- a/recipes/stuffed_mushrooms.html
+++ b/recipes/stuffed_mushrooms.html
@@ -32,6 +32,23 @@
       <li>3 tablespoons grated Parmesan cheese</li>
       <li><sup>1</sup>/<sub>4</sub> teaspoon paprika</li>
     </ul>
+
+    <h3>Steps</h3>
+    <ol>
+      <li>Gather all ingredients and preheat the oven to 350 degrees F (175 degrees C).</li>
+      <li>Combine crabmeat, green onions, thyme, oregano, savory, and pepper in a
+        medium bowl. Mix in mayonnaise and <sup>1</sup>/<sub>4</sub> cup Parmesan until will combined.
+        Refrigerate filling until ready to use.
+      </li>
+      <li>Wipe mushrooms clean with a damp towel. Remove stems. Spoon out the gills
+        and the base of the stem, making deep cups. Discard gills and stems.
+      </li>
+      <li>Fill mushroom caps with rounded teaspoonfulls of filling and place them in an
+        ungreased shallow baking dish. Sprinkle tops with Parmesan and paprika.
+      </li>
+      <li>Bake mushrooms in preheated oven until heated through, about 15 minutes.</li>
+      <li>Serve hot. Enjoy!</li>
+    </ol>
   </body>
 
 </html>
