Add link to shrimp pasta page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/stuffed_mushrooms.html">Crab-stuffed Mushrooms</a>
+    <a href="recipes/shrimp_pasta.html">Creamy Lemon Shrimp Pasta</a>
   </body>
 
 </html>
