Add description to shrimp pasta

--- a/recipes/shrimp_pasta.html
+++ b/recipes/shrimp_pasta.html
@@ -12,6 +12,11 @@
     <h1>Creamy Lemon Shrimp Pasta</h1>
     <img src="../images/shrimp_pasta.png" width="400" height="auto" alt="Bowl of lemon shrimp pasta">
 
+    <h2>Description</h2>
+    <p>This lovely lemon garlic shrimp dish with spaghetti pasta is deliciously creamy
+      and comes together in just 30 minutes, making it perfect for busy weeknights!
+    </p>
+
   </body>
 
 </html>
