Add ingredients for shrimp pasta

--- a/recipes/shrimp_pasta.html
+++ b/recipes/shrimp_pasta.html
@@ -17,6 +17,20 @@
       and comes together in just 30 minutes, making it perfect for busy weeknights!
     </p>
 
+    <h3>Ingredients</h3>
+    <ul>
+      <li><sup>3</sup>/<sub>4</sub> (16 ounce) package spaghetti</li>
+      <li>1 pound uncooked medium shrimp, peeled and deveined</li>
+      <li>salt and ground black pepper to taste</li>
+      <li>2 tablespoons finely chopped shallots</li>
+      <li>1 tablespoon crushed garlic</li>
+      <li><sup>1</sup>/<sub>4</sub> cup chicken broth</li>
+      <li>1 medium lemon, zested and juiced</li>
+      <li><sup>1</sup>/<sub>2</sub> cup heavy cream</li>
+      <li>5 large basil leaves, chopped</li>
+      <li>1 pinch red pepper flakes</li>
+    </ul>
+
   </body>
 
 </html>
