--- a/recipes/shrimp_pasta.html
+++ b/recipes/shrimp_pasta.html
@@ -31,6 +31,28 @@
       <li>1 pinch red pepper flakes</li>
     </ul>
 
+    <h3>Steps</h3>
+    <ol>
+      <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling
+        water, stirring occasionally, until tender yet firm to the bite, about 10 to 12 minutes.
+      </li>
+      <li>While the pasta is cooking, heat oil in a large skillet over medium heat. Season
+        shrimp with salt and pepper; add to the pan and cook 30 seconds per side.
+        Remove to plate.
+      </li>
+      <li>Add shallots to the skillet and cook for 2 minutes. Add garlic and cook until
+        fragrant, about 1 minute. Stir in chicken broth, lemon zest, and 1/2 of the lemon
+        juice; heat for 2 minutes. Reserve remaining lemon juice for another use.
+      </li>
+      <li>Add cream and bring to a simmer. Return shrimp to the skillet and cook until
+        heated through and pink, 2 to 3 minutes. Add basil.
+      </li>
+      <li>Drain spaghetti, reserving 1/4 to 1/2 cup pasta water.</li>
+      <li>Add spaghetti to the skillet. Add pasta water as needed and pepper flakes; toss
+        to coat. Season with pepper if desired.
+      </li>
+    </ol>
+
   </body>
 
 </html>
