--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/stuffed_mushrooms.html">Crab-stuffed Mushrooms</a>
-    <a href="recipes/shrimp_pasta.html">Creamy Lemon Shrimp Pasta</a>
+    <ul>
+      <li><a href="recipes/stuffed_mushrooms.html">Crab-stuffed Mushrooms</a></li>
+      <li><a href="recipes/shrimp_pasta.html">Creamy Lemon Shrimp Pasta</a></li>
+      <li><a href="recipes/carrot_cheesecake.html">No-Bake Carrot Cheesecake</a></li>
+    </ul>
   </body>
 
 </html>
