Add description for carrot cheesecake

--- a/recipes/carrot_cheesecake.html
+++ b/recipes/carrot_cheesecake.html
@@ -12,6 +12,11 @@
     <h1>No-Bake Carrot Cheesecake</h1>
     <img src="../images/carrot_cheesecake.png" width="400" height="auto" alt="Carrot cheesecake with almonds">
 
+    <h2>Description</h2>
+    <p>This no-bake carrot cheesecake is the perfect combination of carrot cake and
+      cheesecake with a graham cracker crust, a smooth, creamy carrot filling, and
+      topped with whipped cream, coconut, and pecans
+    </p>
   </body>
 
 </html>
