Add ingredients for carrot cheesecake

--- a/recipes/carrot_cheesecake.html
+++ b/recipes/carrot_cheesecake.html
@@ -17,6 +17,26 @@
       cheesecake with a graham cracker crust, a smooth, creamy carrot filling, and
       topped with whipped cream, coconut, and pecans
     </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>4 medium carrots, peeled and sliced into 1/2-inch thick pieces</li>
+      <li>1 1/2 cups graham cracker crumbs</li>
+      <li>1 cup unsweetened shreeded coconut, toasted, plus more for garnish</li>
+      <li>6 tablespoons butter, melted</li>
+      <li>pinch of salt</li>
+      <li>1 cup whipping cream</li>
+      <li>2 (8-ounce) packages cream cheese, softened</li>
+      <li>3/4 cup powdered sugar</li>
+      <li>6 tablespoons brown sugar, divided</li>
+      <li>1 teaspoon vanilla extract</li>
+      <li>1 teaspoon ground cinnamon</li>
+      <li>1/4 teaspoon ground ginger</li>
+      <li>1/4 teaspoon ground nutmeg</li>
+      <li>1/8 teaspoon salt</li>
+      <li>candied pecans for garnish (optional)</li>
+      <li>sweetened whipped cream for garnish (optional)</li>
+    </ul>
   </body>
 
 </html>
