Add cooking directions for carrot cheesecake

--- a/recipes/carrot_cheesecake.html
+++ b/recipes/carrot_cheesecake.html
@@ -37,6 +37,39 @@
       <li>candied pecans for garnish (optional)</li>
       <li>sweetened whipped cream for garnish (optional)</li>
     </ul>
+
+    <h3>Directions</h3>
+    <ol>
+      <li>Gather all ingredients.</li>
+      <li>Place carrots into a saucepan and cover with water. Bring to a boil. Reduce heat
+        and simmer, covered, until carrots are tender, about 20 minutes. Drain, but
+        reserve cooking liquid. Transfer carrots to a blender container. Cover and blend
+        until smooth, adding reserved liquid, 1 tablespoon at a time as needed. You
+        should get 1 cup of carrot puree. Chill until ready to use.
+      </li>
+      <li>In a small bowl combine graham cracher crumbs, 1/2 cup toasted
+        coconut, butter, 2 tablespoons brown sugar and salt. Press very firmly into the
+        bottom of a 9-inch springform pan. Chill until ready to use.
+      </li>
+      <li>Beat whipping cream in a bowl with an electric mixer until stiff peaks form.
+        Set aside.
+      </li>
+      <li>Beat cream cheese in a large bowl with an electric mixer until completely
+        smooth and creamy, scraping the bowl as needed.
+      </li>
+      <li>Add 1 cup carrot puree, powdered sugar, and remaining 4 tablespoons brown
+        sugar. Beat on medium-high speed until well combined, scraping the bowl as
+        needed. Add the vanilla, cinnamon, ginger, nutmeg and salt and beat until
+        combined and smooth.
+      </li>
+      <li>Slowly fold in whipped cream with a spatula until just combined, careful to not
+        deflate the whipped cream.
+      </li>
+      <li>Pour filling into the prepared crust, spreading evenly.</li>
+      <li>Cover and chill overnight. Serve topped with additional whipped cream,
+        candied pecans and remaining toasted coconut.
+      </li>
+    </ol>
   </body>
 
 </html>
